fix heder_nav - gap

--- a/css/main.css
+++ b/css/main.css
@@ -585,6 +585,7 @@ img {
 .connect {
   display: flex;
   align-items: center;
+  gap: var(--gap-size);
 }
 
 .heder__connect {
