--- a/sass/layouts/_heder.scss
+++ b/sass/layouts/_heder.scss
@@ -57,6 +57,7 @@
 .connect {
   display: flex;
   align-items: center;
+  gap: var(--gap-size);
 }
 
 .heder__connect {
